<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!-- Preference about ordering the articles in the list -->
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <!-- Preference about limit of the articles in the list -->
    <EditTextPreference
        android:defaultValue="@string/settings_list_items_limit_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_list_items_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_list_items_limit_label" />

    <!-- Preference about topics of the articles in the list -->
    <MultiSelectListPreference
        android:defaultValue="@array/categories_default_values"
        android:enabled="true"
        android:entries="@array/category_labels"
        android:entryValues="@array/category_preference_keys"
        android:key="@string/settings_select_category_key"
        android:persistent="true"
        android:title="@string/settings_select_category_label" />

</PreferenceScreen>